update index.html dan style.css
menambahkan home, new arrivals, brand, contact

--- a/style.css
+++ b/style.css
@@ -1,1 +1,462 @@
+/* Use reset to make all elements consistent */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre, a,
+abbr, acronym, address, big, cite, code, del,
+dfn, em, img, ins, kbd, q, s, samp, small,
+strike, strong, sub, sup, tt, var, b, u, i,
+center, dl, dt, dd, ol, ul, li, fieldset,
+form, label, legend, table, caption, tbody,
+tfoot, thead, tr, th, td, article, aside,
+canvas, details, embed, figure, figcaption,
+footer, header, hgroup, menu, nav, output,
+ruby, section, summary, time, mark, audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption,
+figure, footer, header, hgroup,
+menu, nav, section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* Additional resets to make elements render consistently in all browsers */
+button,
+input,
+select,
+textarea {
+  font-size: 100%;
+  margin: 0;
+}
+
+button,
+input {
+  line-height: normal;
+}
+
+button,
+select {
+  text-transform: none;
+}
+
+
+/* NAVBAR */
+nav{
+	height: 85px;
+	display: flex;
+	padding: 40px 80px;
+	position: fixed;
+	background: white;
+	background-size: cover;
+	border-bottom: 2px solid;
+	top: -10px;
+	left: 0;
+	right: 0;
+	font-family: "Abhaya Libre ExtraBold-Regular", Helvetica;
+	z-index: 999;
+	transition: .3s;
+	
+}
+nav ul li {
+	display: inline-block;
+}
+ul.menu li{
+    margin-top: -10px;
+	margin-left: 25px;
+	font-size: 20px; 
+}
+nav ul li a{
+	text-decoration: none;
+	color: black;
+	transition: .2s;
+}
+.logo a{
+	font-size: 40px;
+	line-height: 20px;
+}
+nav a:hover{
+	color: #454D7A;
+}
+.logo{	
+	margin-top: 0px;
+	margin-right: 80px;
+}
+.search_input{
+  margin-left: 0px;
+  margin-right: 0px;
+  border-radius: 15px;
+  width: 550px;
+  padding: 0px 20px;
+  height: 30px;
+  background-color: transparent;
+  transition: transform 250ms ease-in-out;
+  font-size: 14px;
+  line-height: 18px;
+  color: #575756;
+  background-color: transparent;
+  background-image: url(./img/kacapembesar.png);
+  background-repeat: no-repeat;
+  background-size: 18px 18px;
+  background-position: 97% center;
+  border-radius: 50px;
+  border: 1px solid #575756;
+  transition: all 250ms ease-in-out;
+  backface-visibility: hidden;
+  transform-style: preserve-3d;
+}
+.search_input input{
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+.buttoncart {
+    color: white;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background: url(./img/cart.png);
+    background-repeat: no-repeat;
+    background-position:center;
+    display: flex;
+    align-items: center;
+    transition: 0.4s;
+	cursor: pointer;
+}
+.buttonlogin {
+    color: white;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background: url(./img/login.png);
+    background-repeat: no-repeat;
+    background-position:center;
+    display: flex;
+    align-items: center;
+    transition: 0.4s;
+	cursor: pointer;
+}
+
+/* HEADER */
+header {
+	height: 100vh;
+	background: url(./img/Background-toko.png);
+	background-size: cover;
+	position: relative;
+
+}
+.judul {
+	position: absolute;
+	top: 50%;
+	left: 23%;
+	transform: translate(-50%,-65%);
+	width: 100%;
+	height: 250px;
+	text-align: left;
+	box-sizing: border-box;
+	padding: 0px 200px;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+  font-family: "Antonio-Bold", Helvetica;
+}
+.judul h1 {
+	font-size: 46px;
+	line-height: 50px;
+	color: black;
+	font-weight: bold;
+  	margin-bottom: 30px;	
+
+}
+.judul h1 b{
+	font-weight: bold;
+	font-size: 46px;
+  	color: black;
+}
+.buttonshopnow{
+	margin-left: -330px;
+}
+.buttonshopnow button{
+	border: none;
+	width: 200px;
+	height: 45px;
+	background: black;
+	color: white;
+	font-size: 15px;
+	border-radius: 20px;
+	cursor: pointer;
+	font-weight: lighter;
+	transition: .2s;
+}
+.buttonshopnow button:hover{
+	background-color: gray;
+}
+.fitur {
+	position: absolute;
+  	top: 49%;
+  	left: -27%;
+	width: 100%;
+	height: 200px;
+	padding: 0px 500px;
+	display: flex;
+  	font-family: "Antonio-Bold", Helvetica;
+	align-items: center;
+	color: black;
+  	justify-content: space-between;
+}
+.kotak h1{
+  font-size: 40px;
+  font-weight: 700;
+}
+.kotak p{
+	font-size: 16px;
+	color: black;
+  font-weight: 400;
+}
+
+/* Section NewArrival */
+.arrival{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+.arrival h1{
+	font-size: 40px;
+	margin-top: 90px;
+	font-family: "Antonio-Bold", Helvetica;
+	font-weight: 700;
+}
+.produk1{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 30px;
+    text-decoration: none;
+}
+.produk2{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 40px;
+    text-decoration: none;
+}
+.box img{
+    border-radius: 10px;
+    background: #AFB0AD;
+	border-color: #B3A492;
+    border-style: solid;
+	margin-bottom: 10px;
+}
+.box p{
+    text-decoration: none;
+    color:black;
+	margin-top: 15px;
+	font-weight: 700;
+	font-size: 21px;
+	font-family: "Abhaya Libre-Bold", Helvetica;
+	text-align: center;
+}
+.viewall1 button{
+	margin-top: 40px;
+	border: 2px solid;
+	border-color: black;
+	width: 200px;
+	height: 45px;
+	background: white;
+	color: black;
+	font-size: 15px;
+	border-radius: 20px;
+	cursor: pointer;
+	font-weight: lighter;
+	transition: .2s;
+}
+.viewall1 button:hover{
+	background-color: gray;
+}
+.persegi{
+	position: relative;
+	margin-top: 70px;
+	margin-left: 135px;
+	width: 1239px;
+	height: 850px;
+	background-color: #efefef;
+	border-radius: 40px;
+	overflow: hidden;
+}
+.persegi .judul-persegi{
+	margin-top: 60px;
+}
+.buttoncasual {
+	margin-top: 50px;
+    color: black;
+	font-family: "Abhaya Libre ExtraBold-Regular", Helvetica;
+	margin-left: 70px;
+    width: 407px;
+    height: 289px;
+	font-weight: 700;
+	font-size: 36px;
+    border-radius: 10px;
+    background: url(./img/Casual.png);
+    display: flex;
+    align-items: center;
+    transition: 0.4s;
+	cursor: pointer;
+}
+.buttonformal {
+	margin-top: -287px;
+    color: black;
+	font-family: "Abhaya Libre ExtraBold-Regular", Helvetica;
+	margin-left: 500px;
+    width: 670px;
+    height: 289px;
+	font-weight: 700;
+	font-size: 36px;
+    border-radius: 10px;
+    background: url(./img/formal.png);
+    display: flex;
+    align-items: center;
+    transition: 0.4s;
+	cursor: pointer;
+}
+.buttonsport {
+	margin-top: 20px;
+    color: black;
+	font-family: "Abhaya Libre ExtraBold-Regular", Helvetica;
+	margin-left: 70px;
+    width: 1101px;
+    height: 289px;
+	font-weight: 700;
+	font-size: 36px;
+    border-radius: 10px;
+    background: url(./img/sport.png);
+    display: flex;
+    align-items: center;
+    transition: 0.4s;
+	cursor: pointer;
+}
+
+/* Section brands*/
+.brand{
+    display: flex;
+    flex-direction: column;
+    margin-top: 40px;
+    text-align: center;
+}
+.tulisanbrand h1{
+	font-size: 48px;
+	margin-top: 50px;
+	margin-left: 40px;
+	font-family: "Antonio-Bold", Helvetica;
+	font-weight: 700;
+}
+.branding{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+	width: 1440px;
+	margin-left: 40px;
+	height: 250px;
+	border-radius: 20px;
+	border: 1px solid gray;
+}
+.branding-1{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 20px;
+    text-decoration: none;
+}
+.box_brand img{
+    border-radius: 10px;
+	border-color: transparent;
+    border-style: solid;
+	margin-bottom: 10px;
+}
+
+/*section contact*/
+.contact{
+	display: flex;
+    margin-top: 60px;
+	width: 1245px;
+	margin-left: 130px;
+	height: 168px;
+	background-color: #000000;
+	border-radius: 20px;
+	
+}
+.contact_text{
+	font-family: "Abhaya Libre ExtraBold-Regular", Helvetica;
+	font-weight: 700;
+	color: #ffffff;
+	justify-content: space-evenly;
+	width: 665px;
+	height: 70px;
+	font-size: 40px;
+	margin-top: 40px;
+	margin-left: 40px;
+}
+.search_contact{
+	margin-top: 40px;
+	margin-left: 200px;
+	width: 300px;
+	padding: 0px 20px;
+	height: 40px;
+	border-radius: 25px;
+	position: absolute;
+	background-color: white;
+	transition: transform 250ms ease-in-out;
+	font-size: 14px;
+	line-height: 18px;
+	color: #575756;
+	background-image: url(./img/Mail.png);
+	background-repeat: no-repeat;
+	background-size: 18px 18px;
+	background-position: 95% center;
+	border: 1px solid #575756;
+	transition: all 250ms ease-in-out;
+	backface-visibility: hidden;
+	transform-style: preserve-3d;
+}
+.button_contact button{
+	margin-top: 85px;
+	margin-left: 203px;
+	border: 2px solid;
+	position: absolute;
+	width: 300px;
+	height: 40px;
+	border-radius: 25px;
+	border-color: black;
+	background: white;
+	color: black;
+	font-size: 15px;
+	cursor: pointer;
+	font-weight: lighter;
+	transition: .2s;
+}
+.button_contact button:hover{
+	background-color: red;
+}
+
+/* Style footer */
+footer {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  margin-top: 50px;
+  padding: 10px 0;
+}
 
