--- a/login.css
+++ b/login.css
@@ -1,313 +1,185 @@
-/* Use reset to make all elements consistent */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre, a,
-abbr, acronym, address, big, cite, code, del,
-dfn, em, img, ins, kbd, q, s, samp, small,
-strike, strong, sub, sup, tt, var, b, u, i,
-center, dl, dt, dd, ol, ul, li, fieldset,
-form, label, legend, table, caption, tbody,
-tfoot, thead, tr, th, td, article, aside,
-canvas, details, embed, figure, figcaption,
-footer, header, hgroup, menu, nav, output,
-ruby, section, summary, time, mark, audio,
-video {
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+*{
   margin: 0;
   padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption,
-figure, footer, header, hgroup,
-menu, nav, section {
-  display: block;
-}
-
-body {
-  line-height: 1;
-}
-
-ol, ul {
-  list-style: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-/* Additional resets to make elements render consistently in all browsers */
-button,
-input,
-select,
-textarea {
-  font-size: 100%;
-  margin: 0;
-}
-
-button,
-input {
-  line-height: normal;
-}
-
-button,
-select {
-  text-transform: none;
-}
-
-
-/* NAVBAR */
-nav{
-	height: 85px;
-	display: flex;
-	padding: 40px 80px;
-	position: fixed;
-	background: white;
-	background-size: cover;
-	border-bottom: 2px solid;
-	top: -10px;
-	left: 0;
-	right: 0;
-	font-family: "Abhaya Libre ExtraBold-Regular", Helvetica;
-	z-index: 999;
-	transition: .3s;
-	
-}
-nav ul li {
-	display: inline-block;
-}
-ul.menu li{
-    margin-top: -10px;
-	margin-left: 25px;
-	font-size: 20px; 
-}
-nav ul li a{
-	text-decoration: none;
-	color: black;
-	transition: .2s;
-}
-.logo a{
-	font-size: 40px;
-	line-height: 20px;
-}
-nav a:hover{
-	color: #454D7A;
-}
-.logo{	
-	margin-top: 0px;
-	margin-right: 80px;
-}
-.search_input{
-  margin-left: 0px;
-  margin-right: 0px;
-  border-radius: 15px;
-  width: 550px;
-  padding: 0px 20px;
-  height: 30px;
-  background-color: transparent;
-  transition: transform 250ms ease-in-out;
-  font-size: 14px;
-  line-height: 18px;
-  color: #575756;
-  background-color: transparent;
-  background-image: url(./img/kacapembesar.png);
-  background-repeat: no-repeat;
-  background-size: 18px 18px;
-  background-position: 97% center;
-  border-radius: 50px;
-  border: 1px solid #575756;
-  transition: all 250ms ease-in-out;
-  backface-visibility: hidden;
-  transform-style: preserve-3d;
-}
-.search_input input{
-  border: 1px solid #ccc;
-  border-radius: 3px;
-}
-.buttoncart {
-    color: white;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background: url(./img/cart.png);
-    background-repeat: no-repeat;
-    background-position:center;
-    display: flex;
-    align-items: center;
-    transition: 0.4s;
-	cursor: pointer;
-}
-.buttonlogin {
-    color: white;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background: url(./img/login.png);
-    background-repeat: no-repeat;
-    background-position:center;
-    display: flex;
-    align-items: center;
-    transition: 0.4s;
-	cursor: pointer;
-}
-
-/*section login*/
-.framelogin{
-    width: 500px;
-    height: 550px;
-    border: 2px solid grey;
-    border-radius: 20px;
-    margin-top: 100px;
-    margin-left: 500px;
-    text-transform: uppercase;
-    border-bottom: 4px solid gray;
-    border-right: 4px solid gray;
-    background-color: gray;
-}
-.textlogin h1{
-    text-align: center;
-    font-size: 24px;
-    padding: 20px;
-    width: 496px;
-    height: 70px;
-    color: white;
-    border: 2px solid grey;
-    border-radius: 20px;
-    background-color: black;
-}
-.form_login {
-    margin-top: 20px;
-}
-.labelemail{
-    margin-bottom: 10px;
-    text-align: center;
-}
-.labelpassword{
-    margin-top: 20px;
-    margin-bottom: 10px;
-    text-align: center;
-}
-.inputan{
-    text-align: center;
-}
-.form_login label{
-    font-family: "Abhaya Libre-Bold", Helvetica;
-}
-.form_login input{
-    border-radius: 20px;
-    border: 2px solid black;
-    width: 300px;
-    height: 40px;
-    padding: 0px 20px;
-}
-.forget-pss {
-    margin-top: 20px;
-    text-align: right;
-    margin-right: 20px;
-}
-
-.forget-pss a {
-    color: blue;
-    font-style: italic;
-    text-decoration: none;
-    font-weight: lighter;
-}
-.loginsubmit button {
-    background-color: black;
-    border: none;
-    border: 2px solid;
-    color:#fff;
-    margin-left: 39%;
-    height: 50px;
-    padding: 15px 30px;
-    cursor: pointer;
-    font-size: 14px;
-    border-radius: 20px;
-    font-weight: bold;
-}
-.loginsubmit button:hover{
-    background-color: #352F44;
-}
-.account {
-    margin-top: 20px;
-    text-align: center;
-}
-.sosmed-signup ul{
-    display: flex;
-    margin-left: 170px;
+html,body{
+  display: grid;
+  height: 100%;
+  width: 100%;
+  place-items: center;
+  background: white;
 
 }
-.sosmed-signup ul li{
-    list-style: none;
-    padding: 0px 10px;
-}
-
-.sosmed-signup ul li a{
-    width: 30px;
-    height: 30px;
-    background-color: #fff;
-    text-align:center;
-    line-height: 25px;
-    font-size: 23px;
-    margin-top: 20px;
-    display: block;
-    border-radius: 50%;
-    position: relative;
-    overflow: hidden;
-    border: 3px solid #fff;
-    z-index: 1;
-}
-
-.sosmed-signup ul li a .icon {
-    position: relative;
-    padding: 3px 2px;
-    color: #262626;
-    transition: .5s;
-    z-index: 3;
-}
-
-.sosmed-signup li a:hover .icon{
-    color: #fff;
-    transform: rotateY(360deg);
-}
-
-.sosmed-signup li a:before{
-    content: "";
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    height: 100%; 
-    background: #f00;
-    transition: .5s;
-    z-index: 2;
-}
-
-.sosmed-signup li a:hover:before{
-    top: 0;
-}
-
-.sosmed-signup li:nth-child(1) a:before{
-    background: #3b5999;
-}
-
-.sosmed-signup li:nth-child(2) a:before{
-    background: #000;
-}
-
-.sosmed-signup li:nth-child(3) a:before{
-    background: #55acee;
-}
-
-/* Style footer */
-footer {
-  background-color: #333;
+::selection{
+  background: grey;
   color: #fff;
+}
+.wrapper{
+  overflow: hidden;
+  max-width: 390px;
+  background: #fff;
+  padding: 30px;
+  border-radius: 15px;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+}
+.wrapper .title-text{
+  display: flex;
+  width: 200%;
+}
+.wrapper .title{
+  width: 50%;
+  font-size: 35px;
+  font-weight: 600;
   text-align: center;
-  margin-top: 50px;
-  padding: 10px 0;
+  transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
+}
+.wrapper .slide-controls{
+  position: relative;
+  display: flex;
+  height: 50px;
+  width: 100%;
+  overflow: hidden;
+  margin: 30px 0 10px 0;
+  justify-content: space-between;
+  border: 1px solid lightgrey;
+  border-radius: 15px;
+}
+.slide-controls .slide{
+  height: 100%;
+  width: 100%;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  text-align: center;
+  line-height: 48px;
+  cursor: pointer;
+  z-index: 1;
+  transition: all 0.6s ease;
+}
+.slide-controls label.signup{
+  color: #000;
+}
+.slide-controls .slider-tab{
+  position: absolute;
+  height: 100%;
+  width: 50%;
+  left: 0;
+  z-index: 0;
+  border-radius: 15px;
+  background: grey;
+  transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
+}
+input[type="radio"]{
+  display: none;
+}
+#signup:checked ~ .slider-tab{
+  left: 50%;
+}
+#signup:checked ~ label.signup{
+  color: #fff;
+  cursor: default;
+  user-select: none;
+}
+#signup:checked ~ label.login{
+  color: #000;
+}
+#login:checked ~ label.signup{
+  color: #000;
+}
+#login:checked ~ label.login{
+  cursor: default;
+  user-select: none;
+}
+.wrapper .form-container{
+  width: 100%;
+  overflow: hidden;
+}
+.form-container .form-inner{
+  display: flex;
+  width: 200%;
+}
+.form-container .form-inner form{
+  width: 50%;
+  transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
+}
+.form-inner form .field{
+  height: 50px;
+  width: 100%;
+  margin-top: 20px;
+}
+.form-inner form .field input{
+  height: 100%;
+  width: 100%;
+  outline: none;
+  padding-left: 15px;
+  border-radius: 15px;
+  border: 1px solid lightgrey;
+  border-bottom-width: 2px;
+  font-size: 17px;
+  transition: all 0.3s ease;
+}
+.form-inner form .field input:focus{
+  border-color: black;
+  /* box-shadow: inset 0 0 3px #fb6aae; */
+}
+.form-inner form .field input::placeholder{
+  color: #999;
+  transition: all 0.3s ease;
+}
+form .field input:focus::placeholder{
+  color: black;
+}
+.form-inner form .pass-link{
+  margin-top: 5px;
+}
+.form-inner form .signup-link{
+  text-align: center;
+  margin-top: 30px;
+}
+.form-inner form .pass-link a,
+.form-inner form .signup-link a{
+  color: #0D1282;
+  text-decoration: none;
+}
+.form-inner form .pass-link a:hover,
+.form-inner form .signup-link a:hover{
+  text-decoration: underline;
+}
+form .btn{
+  height: 50px;
+  width: 100%;
+  border-radius: 15px;
+  position: relative;
+  overflow: hidden;
+}
+form .btn .btn-layer{
+  height: 100%;
+  width: 300%;
+  position: absolute;
+  left: -100%;
+  background: black;
+  border-radius: 15px;
+  transition: all 0.4s ease;;
+}
+form .btn:hover .btn-layer{
+  left: 0;
+  background-color: #5C5470;
+}
+form .btn input[type="submit"]{
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  position: relative;
+  background: none;
+  border: none;
+  color: #fff;
+  padding-left: 0;
+  border-radius: 15px;
+  font-size: 20px;
+  font-weight: 500;
+  cursor: pointer;
 }
 
